--- a/bin/templates/forms.html
+++ b/bin/templates/forms.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
     <div class="mx-auto text-center">
-      <br><h1>Выберите одну в каждой паре:</h1>
+      <br><h1>Выберите наиболее предпочтительную картину из каждой пары:</h1>
       <hr style="border: none; border-top: 3px solid #000; height: 3px;">
       <br><br>
           <form action="/save" method="post" id="myForm" onsubmit="return checkForm()">
